--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src lambda",
-    "deploy": "npm run build && aws s3 sync build/ s3://jbrowse.org/demos/bog2020/"
+    "predeploy": "npm run build",
+    "deploy": "npm run build && aws s3 sync build/ s3://jbrowse.org/demos/paper2022/"
   },
   "eslintConfig": {
     "extends": "react-app"
